# RAG_Chatbot

./: pyproject.toml
index/: index.faiss  index.pkl
rag_app/: app.py  chatbot.py  config.py  data_ingestor.py  file_loader.py
