[project]
name = "rag-app"
version = "0.1.0"
description = ""
authors = [
    {name = "alejandro.campa",email = "uo282874@uniovi.es"}
]
readme = "README.md"
requires-python = ">=3.12 <4.0"
dependencies = [
    "fastembed (>=0.5.1,<0.6.0)",
    "flashrank (>=0.2.10,<0.3.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langgraph (>=0.2.69,<0.3.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "pypdfium2 (>=4.30.1,<5.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "qdrant-client[fastembed] (>=1.13.2,<2.0.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
